Organised as lessons

--- a/Lesson5_addPicture.html
+++ b/Lesson5_addPicture.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>Import Picture</title>
+    <title>Lesson 5: Import Picture</title>
     <main>
         <p>This is picture imported</p>
         <img src="https://s3.amazonaws.com/freecodecamp/relaxing-cat.jpg" 
@@ -8,7 +8,7 @@
 
         <p>This is a broken link of the picture</p>
         <img src="https://s3.amazonaws.c/freecodecamp/relaxing-cat.jpg" 
-        alt="alt text is showned next to the picture icon">
+        alt="alt is text that would be shown if img not appear">
 
     </main>
 </html>
