changes to form element

--- a/Lesson1_simpleIntro.html
+++ b/Lesson1_simpleIntro.html
@@ -44,7 +44,7 @@
     </p>
     <br><br>
 
-    <form>
+    <form action='https://www.google.com/'>
         <h2>Question Time!</h2>
         <div>
             <p>Q1. What is the species of dog in passage above?
@@ -67,6 +67,12 @@
                     <input type='checkbox' name='aggresive' value='aggresive'>Aggresive<br>
                 </label>
             </p>
+                <p>Do you like this dog?<br>
+                    <button name='yes' value='yes'>Yes</button>
+                    <button name='ofcourse' value='ofcourse'>Of course</button>
+                    <button name='very much' value='verymuch'>Very Much!</button>
+                </p>
+            
         </div>
 
     </form>
